fix some minor layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2634,7 +2634,7 @@
 		}
 
 			.main .container:before {
-				min-height: calc( 100vh - 13em );
+				/*min-height: calc( 100vh - 13em );*/
 				content: '';
 				display: inline-block;
 				vertical-align: middle;
